Add FileReferenceCount file and update in S3FileInfoStore